# lambda-cloud-manager

./: README.md  build.py  pyproject.toml
lambda-cloud-manager/: main.py
lambda_cloud_manager/: api_adapters.py  config_generator.py  main.py
tests/: test_main.py
tests/integration_tests/: test_main.py
tests/unit_tests/: test_config.json  test_main.py
