[tool.poetry]
name = "lambda-cloud-manager"
version = "0.1.0"
description = ""
authors = ["Joe Hoover <joehoover88@gmail.com>"]
readme = "README.md"
packages = [{include = "lambda_cloud_manager"}]

[tool.poetry.scripts]
lcm = "lambda_cloud_manager.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
python-dotenv = "^0.21.1"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
